# contexter-web

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  worker.d.ts
public/: contexter_wasm.js  contexter_wasm_bg.js
scripts/: copy-wasm.js
src/: declarations.d.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/: drop-zone.tsx  file-preview-modal.tsx  file-tree-item.tsx  file-tree.tsx  header.tsx  loading-overlay.tsx  settings-sheet.tsx  status-bar.tsx  theme-provider.tsx  theme-toggle.tsx
src/components/ui/: loading-spinner.tsx  scroll-area.tsx  sonner.tsx
src/hooks/: handle-standard-keys.ts  handle-vim-keys.ts  use-keybindings.ts  use-vim-bindings.ts
src/lib/: gitignore-combine.ts  gitignore-scope.ts  path-utils.ts  textfile-check.ts  types.ts  utils.ts
src/lib/tests/: gitignore-combine.test.ts  gitignore-scope.test.ts
src/stores/: file-store.ts
src/wasm-module/: contexter_wasm.d.ts  contexter_wasm.js  contexter_wasm_bg.js  contexter_wasm_bg.wasm
src/workers/: directory-traverser.worker.ts  file-processor.worker.ts  file-reader.worker.ts  simple-worker.ts
wasm/: Cargo.toml  LICENSE_MIT
wasm/src/: lib.rs  utils.rs
