[package]
name = "contexter-wasm"
version = "0.1.0"
authors = ["Contexter Team <contact@contexter.dev>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "0.2.92", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
tiktoken-rs = { version = "0.6.0" }
ignore = "0.4.22"
path-slash = "0.2.1"
console_error_panic_hook = { version = "0.1.7", optional = true }
once_cell = "1.19.0"

[profile.release]
lto = true
opt-level = "s"
