[package]
name = "contexter-wasm"
version = "0.2.0"
authors = ["Contexter Team <contact@contexter.dev>"]
edition = "2021"
description = "High-performance WASM module for file processing and token counting"
license = "MIT OR Apache-2.0"
repository = "https://github.com/contexter/contexter-web"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "0.2.92", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6.5"
tiktoken-rs = { version = "0.6.0" }
ignore = "0.4.22"
path-slash = "0.2.1"
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3.69"
web-sys = { version = "0.3.69", features = ["console"] }

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
debug = true

# Enable optimizations for dependencies even in debug builds
[profile.dev.package."*"]
opt-level = 2
